# sbrick-plus-adapter

./: README.md
documentation/: adapter-description.aux  adapter-description.fdb_latexmk  adapter-description.fls  adapter-description.tex
gerbers/: adapter-sensor-xy.txt
gerbers/adapter-motor-gerber/: bottom.pho  bottom.rep  drl001.drl  drl001.lst  drl001.rep  smbottom.pho  smbottom.rep  smtop.pho  smtop.rep  top.pho  top.rep
gerbers/adapter-sensor-gerber/: bottom.pho  bottom.rep  drl001.drl  drl001.lst  drl001.rep  inner2.pho  inner2.rep  inner3.pho  inner3.rep  silbottom.pho  silbottom.rep  siltop.pho  siltop.rep  smbottom.pho  smbottom.rep  smdbottom.pho  smdbottom.rep  smdtop.pho  smdtop.rep  smtop.pho  smtop.rep  top.pho  top.rep
sbrick-adapter-firmware/: .codestats  .gitignore  GccApplication1.atsln  README.md  program.bat
sbrick-adapter-firmware/GccApplication1/: GccApplication1.componentinfo.xml  GccApplication1.cproj  adc.c  adc.h  capture.c  capture.h  ev3.c  ev3.h  ev3_inline.h  ev3_inline_mem.h  ev3_proc.c  ev3_proc.h  ev3_test.c  ev3_utils.c  ev3_utils.h  main_fm.c  main_fm.h  main_uart.c  main_uart.h  pwm.c  pwm.h  ser.c  ser.h  ser1.c  ser1.h  timer.c  timer.h  uart_calc.c  uart_calc.h
sbrick-adapter-firmware/ev3lib/: CMakeLists.txt
sbrick-adapter-firmware/ev3lib/include/: ev3.h  ev3_proc.h  ev3_utils.h  mode_conf.h
sbrick-adapter-firmware/ev3lib/src/: ev3.c  ev3_proc.c  ev3_utils.c
sbrick-adapter-firmware/ev3lib/test/: test.c
schematic/: adapter-motor.sch  adapter-sensor.sch  sensor-adapter-bom.ods
schematic/gEDA-symbols/: LT1118.sym  (+1 more)
